--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <header>
@@ -44,5 +44,6 @@
     <button type="button" class="main-button btn btn-primary btn-lg">
       Submit
     </button>
+    <script src="./index.js"></script>
   </body>
 </html>
