--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
       list="datalistOptions"
       id="cities"
       type="submit"
-      value="Submit"
       placeholder="Type to search..."
     />
     <datalist id="datalistOptions">
@@ -57,8 +56,11 @@
     >
       Submit
     </button>
-    <div id="information"></div>
+    <div class="latitude"></div>
+    <div class="longitude"></div>
+    <div class="displayName"></div>
     <div class="displayWeather"></div>
+    <div class="displayDesc"></div>
     <script src="./index.js"></script>
   </body>
 </html>
