--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     <div class="longitude"></div>
     <div class="displayName"></div>
     <div class="displayWeather"></div>
-    <div class="displayDesc"></div>
+    <div class="temperature"></div>
+    <div class="displayDate"></div>
     <script src="./index.js"></script>
   </body>
 </html>
