--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       type="submit"
       placeholder="Type to search..."
     />
+
     <datalist id="datalistOptions">
       <option value="San Francisco"></option>
       <option value="New York"></option>
@@ -56,12 +57,15 @@
     >
       Submit
     </button>
-    <div class="latitude"></div>
-    <div class="longitude"></div>
-    <div class="displayName"></div>
-    <div class="displayWeather"></div>
-    <div class="temperature"></div>
-    <div class="displayDate"></div>
+    <div class="flex">
+      <div class="weatherBox">
+        <div id="displayDate"></div>
+        <div id="displayName"></div>
+        <div id="displayWeather"></div>
+        <div id="temperature"></div>
+      </div>
+    </div>
     <script src="./index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
