--- a/index.html
+++ b/index.html
@@ -60,9 +60,14 @@
     <div class="flex">
       <div class="weatherBox">
         <div id="displayDate"></div>
-        <div id="displayName"></div>
-        <div id="displayWeather"></div>
+        <inline>
+          <div id="displayName"></div>
+          <div id="displayWeather"></div>
+        </inline>
         <div id="temperature"></div>
+        <div id="humdity"></div>
+        <div id="windSpeed"></div>
+        <div id="uvIndex"></div>
       </div>
     </div>
     <script src="./index.js"></script>
