added 5-day forecast cards

--- a/index.html
+++ b/index.html
@@ -70,6 +70,47 @@
         <div id="uvIndex"></div>
       </div>
     </div>
+    <div class="allCards">
+      <div class="nextDay">
+        <div id="nextDate"></div>
+        <div id="nextIcon"></div>
+        <div id="nextTemp"></div>
+        <div id="nextWind"></div>
+        <div id="nextHumdity"></div>
+      </div>
+
+      <div class="day2">
+        <div id="date2"></div>
+        <div id="icon2"></div>
+        <div id="temp2"></div>
+        <div id="wind2"></div>
+        <div id="humdity2"></div>
+      </div>
+
+      <div class="day3">
+        <div id="date3"></div>
+        <div id="icon3"></div>
+        <div id="temp3"></div>
+        <div id="wind3"></div>
+        <div id="humdity3"></div>
+      </div>
+
+      <div class="day4">
+        <div id="date4"></div>
+        <div id="icon4"></div>
+        <div id="temp4"></div>
+        <div id="wind4"></div>
+        <div id="humdity4"></div>
+      </div>
+
+      <div class="day5">
+        <div id="date5"></div>
+        <div id="icon5"></div>
+        <div id="temp5"></div>
+        <div id="wind5"></div>
+        <div id="humdity5"></div>
+      </div>
+    </div>
     <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
