--- a/index.html
+++ b/index.html
@@ -57,61 +57,63 @@
     >
       Submit
     </button>
-    <div class="flex">
-      <div class="weatherBox">
-        <div id="displayDate"></div>
+    <div class="saveInfo">
+      <div class="flex">
+        <div class="weatherBox">
+          <div id="displayDate"></div>
 
-        <div id="displayName"></div>
-        <div id="displayWeather"></div>
+          <div id="displayName"></div>
+          <div id="displayWeather"></div>
 
-        <div id="temperature"></div>
-        <div id="humdity"></div>
-        <div id="windSpeed"></div>
-        <div id="uvIndex"></div>
+          <div id="temperature"></div>
+          <div id="humdity"></div>
+          <div id="windSpeed"></div>
+          <div id="uvIndex"></div>
+        </div>
       </div>
-    </div>
-    <div class="centerForecast">
-      <div id="forecast"></div>
-      <div class="flexCards">
-        <div class="allCards">
-          <div class="nextDay">
-            <div id="nextDate"></div>
-            <div id="nextIcon"></div>
-            <div id="nextTemp"></div>
-            <div id="nextWind"></div>
-            <div id="nextHumdity"></div>
-          </div>
+      <div class="centerForecast">
+        <div id="forecast"></div>
+        <div class="flexCards">
+          <div class="allCards">
+            <div class="nextDay">
+              <div id="nextDate"></div>
+              <div id="nextIcon"></div>
+              <div id="nextTemp"></div>
+              <div id="nextWind"></div>
+              <div id="nextHumdity"></div>
+            </div>
 
-          <div class="day2">
-            <div id="date2"></div>
-            <div id="icon2"></div>
-            <div id="temp2"></div>
-            <div id="wind2"></div>
-            <div id="humdity2"></div>
-          </div>
+            <div class="day2">
+              <div id="date2"></div>
+              <div id="icon2"></div>
+              <div id="temp2"></div>
+              <div id="wind2"></div>
+              <div id="humdity2"></div>
+            </div>
 
-          <div class="day3">
-            <div id="date3"></div>
-            <div id="icon3"></div>
-            <div id="temp3"></div>
-            <div id="wind3"></div>
-            <div id="humdity3"></div>
-          </div>
+            <div class="day3">
+              <div id="date3"></div>
+              <div id="icon3"></div>
+              <div id="temp3"></div>
+              <div id="wind3"></div>
+              <div id="humdity3"></div>
+            </div>
 
-          <div class="day4">
-            <div id="date4"></div>
-            <div id="icon4"></div>
-            <div id="temp4"></div>
-            <div id="wind4"></div>
-            <div id="humdity4"></div>
-          </div>
+            <div class="day4">
+              <div id="date4"></div>
+              <div id="icon4"></div>
+              <div id="temp4"></div>
+              <div id="wind4"></div>
+              <div id="humdity4"></div>
+            </div>
 
-          <div class="day5">
-            <div id="date5"></div>
-            <div id="icon5"></div>
-            <div id="temp5"></div>
-            <div id="wind5"></div>
-            <div id="humdity5"></div>
+            <div class="day5">
+              <div id="date5"></div>
+              <div id="icon5"></div>
+              <div id="temp5"></div>
+              <div id="wind5"></div>
+              <div id="humdity5"></div>
+            </div>
           </div>
         </div>
       </div>
