--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     >
       Submit
     </button>
+    <div id="searchHistory" style="width: 25%" class="mt-2"></div>
     <div class="saveInfo">
       <div class="flex">
         <div class="weatherBox">
