--- a/index.html
+++ b/index.html
@@ -76,12 +76,19 @@
         <div id="forecast"></div>
         <div class="flexCards">
           <div class="allCards">
-            <div class="nextDay">
+            <!-- <div class="nextDay">
               <div id="nextDate"></div>
               <div id="nextIcon"></div>
               <div id="nextTemp"></div>
               <div id="nextWind"></div>
               <div id="nextHumdity"></div>
+            </div> -->
+            <div class="day1">
+              <div id="date1"></div>
+              <div id="icon1"></div>
+              <div id="temp1"></div>
+              <div id="wind1"></div>
+              <div id="humdity1"></div>
             </div>
 
             <div class="day2">
